Fix spacing on success page

--- a/src/success.css
+++ b/src/success.css
@@ -18,6 +18,7 @@
 
 #successCard p {
     line-height: 1.5625em;
+    margin-bottom: 0;
 }
 
 @media(min-width: 48em) {
